[gd_scene load_steps=5 format=3 uid="uid://dard2qsysc8hm"]

[ext_resource type="Script" uid="uid://dkct2sy700ehd" path="res://Scripts/slam_pickup.gd" id="1_0xn6f"]
[ext_resource type="Texture2D" uid="uid://47al4r52s0c7" path="res://tilesets/tilemap_packed.png" id="2_cpwqf"]
[ext_resource type="AudioStream" uid="uid://byi31go5bfhyd" path="res://sounds/Upgrade.wav" id="3_cpwqf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uydx3"]
radius = 7.0

[node name="SlamPickup" type="Area2D"]
collision_mask = 2
script = ExtResource("1_0xn6f")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_cpwqf")
region_enabled = true
region_rect = Rect2(127, 54, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uydx3")

[node name="PickUpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_cpwqf")
volume_db = 0.4
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
